History
=======

0.9.3 (unreleased)
------------------

- Fixed CSV Download view for not to break on composers that include list,
  boolean and datetime fields.
  [piv]

- Documentation updates.  [saily]

- Added italian translation, thanks to Augusto Sosa.  [saily]

- Update French translation to reflect change of channel to mailing list
  [toutpt]

0.9.2 (2010-11-04)
------------------

- Documentation updates.   [saily]

- Fixed the stub mailer (encoding issue). [malthe]

0.9.1 (2010-11-04)
------------------

- Fixed the stub mailer (how it ever could work is unclear). [malthe]

- Update test to pass on Plone4
  [toutpt] [pbauer]

- Refactoring send/preview form because formtabbing did not work.
  [saily]

- Reverted changeset 119773 since users could not send folderish content
  types any more (RichDocument is a folderish content type).
  [saily]

0.9.0 (2010-08-01)
------------------

- The send form is now split into two subforms, one for send, and one for
  preview. **NOTE!** This introduces incompatible changes if you are having
  custom forms (although the changes necessary are simple).
  [regebro]

- The "Send as newsletter" action is now no longer shown on folders by
  default.
  [regebro]

- A new 'mass delete from csv' feature has been added to the channel
  administration page. [kiorky]

- French translations have been updated [kiorky]

- "Channels" have been renamed "Mailing-lists" in the userinterface. [regebro]

- Norwegian translation. [regebro]

0.8.17 (2010-06-11)
-------------------

- Fix for subscription portlet breaking batch workflow state change.
  Fixes https://bugs.launchpad.net/singing-dancing/+bug/475771
  [maurits]

- When no address has been selected for sending the preview to, inform
  the user instead of sending the preview to *all* subscribers.
  Fixes https://bugs.launchpad.net/singing-dancing/+bug/509577
  [maurits]

- When compactifying the sent html with stoneagehtml catch an error that