@@ -132,6 +132,9 @@ class Channel(OFS.SimpleItem.SimpleItem):
 
     sendable = True
 
+    keep_sent_messages = collective.singing.interfaces.IChannel[
+        'keep_sent_messages'].default
+
     def __init__(self, name, title=None, composers=None,
                  collector=None, scheduler=None, description=u"", subscribeable=False):
         self.name = name
